--- a/english_school/index.html
+++ b/english_school/index.html
@@ -179,7 +179,7 @@
     </section>
     <section class="teachers"><a id="prepods"></a>
         <h3>Наши преподаватели</h3>
-        <div class="wrapper-content flex jc-flex fwrap">
+        <div class="wrapper-content flex jc-flex wrap">
             <div class="teacher-item">
                 <div class="video"><iframe width="378" height="275" src="img/video.png" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="teacher-name" data-name="Alyona_Kozlova">Alyona Kozlova</div>
@@ -229,7 +229,7 @@
     </section>
     <section class="why-we bg-orange"><a id="whywe"></a>
         <h3>Почему мы</h3>
-        <div class="wrapper-content flex jc-flex fwrap">
+        <div class="wrapper-content flex jc-flex wrap">
             <div class="why teacher-item">
                 <img src="img/why1.jpg" width="379" height="249" alt="">
                 <p class="text">Наши центры соответствуют требованиям Министрества образования,
@@ -262,7 +262,7 @@
     </section>
     <section class="process"><a id="etaps"></a>
         <h3>Этапы процесса обучения</h3>
-        <div class="wrapper-content flex jc-flex fwrap">
+        <div class="wrapper-content flex jc-flex wrap">
             <div class="process-item flex">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="85mm" height="85mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
                      viewBox="0 0 8500 8500"
@@ -522,7 +522,7 @@
                 <h4>Адреса</h4>
                 <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
             </div>
-            <div class="info">
+            <div class="info flex">
                 <div>г. Новосибирск,
                     <br><b> ул. Фрунзе, 71/1, Дзержинский район</b>
                     <br>+7 (383) 235–94–45</div>
@@ -540,11 +540,11 @@
     </div>
     <div class="center-button flex">
         <div class="popup popup-info">
-            <div class="popup-header bg-orange">
+            <div class="popup-header flex bg-orange">
                 <h4>Узнать больше</h4>
                 <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
             </div>
-            <div class="info">
+            <div class="info flex">
                 <form id="ajax_form2" action="">
                     <input class="name-input" name="name" type="text" placeholder="Ваше Имя" required>
                     <input id="phone" name="phone" class="phone" placeholder="Номер телефона" required>
@@ -555,7 +555,7 @@
     </div>
     <div class="center-button flex">
         <div class="popup popup-course">
-            <div class="popup-header bg-orange">
+            <div class="popup-header flex bg-orange">
                 <h4>Английский для начинающих</h4>
                 <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
             </div>
@@ -582,7 +582,7 @@
         </div>
         <div class="center-button flex">
             <div class="popup popup-result">
-                <div class="popup-header bg-orange">
+                <div class="popup-header flex bg-orange">
                     <h4>КАКОЙ КУРС ПОДОЙДЕТ ИМЕННО ВАМ?</h4>
                     <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
                 </div>
@@ -609,7 +609,7 @@
         </div>
         <div class="center-button flex">
             <div class="popup popup-group popup-level1">
-                <div class="popup-header bg-orange">
+                <div class="popup-header flex bg-orange">
                     <h4>Pre -schoolers (3-6 лет) </h4>
                     <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
                 </div>
@@ -630,7 +630,7 @@
     </div>
     <div class="center-button flex">
             <div class="popup popup-group popup-level2">
-                <div class="popup-header bg-orange">
+                <div class="popup-header flex bg-orange">
                     <h4>Primary (7-9 лет )</h4>
                     <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
                 </div>
@@ -647,7 +647,7 @@
     </div>
     <div class="center-button flex">
             <div class="popup popup-group popup-level3">
-                <div class="popup-header bg-orange">
+                <div class="popup-header flex bg-orange">
                     <h4>Secondary (10-12 лет) </h4>
                     <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
                 </div>
@@ -685,7 +685,7 @@
     </div>
     <div class="center-button flex">
             <div class="popup popup-group popup-level4">
-                <div class="popup-header bg-orange">
+                <div class="popup-header flex bg-orange">
                     <h4>Teens (13-17 лет) </h4>
                     <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
                 </div>
@@ -703,7 +703,7 @@
     </div>
     <div class="center-button flex">
             <div class="popup popup-group popup-level5">
-                <div class="popup-header bg-orange">
+                <div class="popup-header flex bg-orange">
                     <h4>Adults (18 +)</h4>
                     <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
                 </div>
@@ -723,7 +723,7 @@
     </div>
     <div class="center-button flex">
     <div class="popup popup-complete">
-   <div class="popup-header bg-orange">
+   <div class="popup-header flex bg-orange">
    <h4>Форма отправлена</h4>
    <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
     </div>
@@ -733,7 +733,7 @@
         </div>
         <div class="center-button flex">
     <div class="popup popup-teachers">
-   <div class="popup-header bg-orange">
+   <div class="popup-header flex bg-orange">
    <h4>Наш специалист</h4>
    <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
     </div>
@@ -986,7 +986,7 @@
         </div>
     <div class="center-button flex">
         <div class="popup popup-test">
-            <div class="popup-header bg-orange">
+            <div class="popup-header flex bg-orange">
                 <h4>КАКОЙ КУРС ПОДОЙДЕТ ИМЕННО ВАМ?</h4>
                 <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
             </div>
