--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>THE WINE SHOP</title>
+  <title>Frontend</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="slick/slick.css">
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
@@ -25,7 +25,7 @@
                   As much character as the people who make them.
             </div>
             <div class="morewine">
-                  <button>Open Up</button>
+                  <button>Смотреть выполненные проекты</button>
             </div>
       </div>
       <div class="site">
