--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   offset = mouseX / docWidth * slidesWidth - mouseX / 2;
 
                   $images.css({
-                        '-wrbkit-transform' : 'translate3d(' + -offset + 'px,0,0)',
+                        '-webkit-transform' : 'translate3d(' + -offset + 'px,0,0)',
                         'transform' : 'translate3d(' + -offset + 'px,0,0)'
                   });
             });
